# github-activity-tracker

./: .env.example  .gitignore  .ruff.toml  README.md  mypy.ini  pyproject.toml  pytest.ini  questions.txt  requirements-dev.txt  requirements.txt  test_local.py
app/: exceptions.py  main.py
app/api/: router.py
app/api/routes/: activity.py
app/core/: config.py  dependencies.py
app/models/: github.py  schemas.py
app/repositories/: github_repository.py
app/services/: github_service.py
app/utils/: cache.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_repositories.py  test_services.py  test_utils.py
