[project]
name = "github-activity-tracker"
version = "1.0.0"
description = "GitHub Activity Tracker API"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D104", "D203", "D212"]  # D104: empty __init__.py, D203/D212: conflicts with D211/D213

[tool.black]
line-length = 100
target-version = ['py39']
